--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/styles.css">
   <title>Document</title>
 </head>
 <body>
   
   <header>
-    <div class="navigation-info">
+    <!-- <div class="navigation-info">
       <ul class="navigation-content-info">
         <li><a href="#">f</a></li>
          <li><a href="#">T</a></li>
@@ -18,20 +19,20 @@
          <li><a href="#">My Page</a></li>
          <li><a href="#">Logout</a></li>
       </ul>
-    </div>
+    </div> -->
     <div class="navigation-bar">
-      <div class="logo">
+      <!-- <div class="logo">
         <a href="#">LOGO <img class="logo-icon"/></a>
-      </div>
+      </div> -->
       <nav>
-        <ul class="nav-list">
+        <!-- <ul class="nav-list">
           <li class="list-item" id="#about">About</li>
           <li class="list-item" id="#program">Program</li>
           <li class="list-item" id="#join">Join</li>
           <li class="list-item" id="#sponsor">Sponsor</li>
           <li class="list-item" id="#news">News</li>
           <li class="list-item" id="#cc-campaign">CC campaign</li>
-        </ul>
+        </ul> -->
         <div class="menu">
           <div class="menu-line"></div>
           <div class="menu-line"></div>
@@ -43,9 +44,9 @@
   <div class="section-wrapper">
     <section id="welcome" class="welcome">
       <div class="welcome-content">
-        <p>"Hello! Sharing world"</p>
+        <p class="greeting-paragraph">"Hello! Sharing world"</p>
         <h1>CREACTIVE COMMONS GLOBAL SUMMIT 2015</h1>
-        <p>
+        <p class="intro-paragraph">
           A joyful celebration believeing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in October, in Korea.
         </p>
         <div>
@@ -61,52 +62,65 @@
       <div class="program-content">
         <div class="program-content-card">
           <div class="program-content-image">
-            image
+            <img src="/images/check-img.jpg" alt="">
+            <!-- <i class="fa fa-address-card-o"></i> -->
+          </div>
+          <div class="program-content-title">
+            <h4>Lecture</h4>
           </div>
           <div class="program-content-info">
-            <h1>Lecture</h1>
-            <p>&Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi tenetur exercitationem aut doloribus doloremque autem saepe ratione, dolorem unde fugit repellendus ullam aspernatur fuga et minus provident, magnam, alias excepturi!</p>
+            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
           </div>
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            image
+            <img src="/images/check-img.jpg" alt="">
+          </div>
+          <div class="program-content-title">
+            <h4>CC Exhibition</h4>
           </div>
           <div class="program-content-info">
-            <h1>Lecture</h1>
-            <p>&Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi tenetur exercitationem aut doloribus doloremque autem saepe ratione, dolorem unde fugit repellendus ullam aspernatur fuga et minus provident, magnam, alias excepturi!</p>
+            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
           </div>
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            image
+            <img src="/images/check-img.jpg" alt="">
+          </div>
+          <div class="program-content-title">
+            <h4>Forum</h4>
           </div>
           <div class="program-content-info">
-            <h1>Lecture</h1>
-            <p>&Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi tenetur exercitationem aut doloribus doloremque autem saepe ratione, dolorem unde fugit repellendus ullam aspernatur fuga et minus provident, magnam, alias excepturi!</p>
+            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
           </div>
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            image
+            <img src="/images/check-img.jpg" alt="">
+          </div>
+          <div class="program-content-title">
+            <h4>Workshop</h4>
           </div>
           <div class="program-content-info">
-            <h1>Lecture</h1>
-            <p>&Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi tenetur exercitationem aut doloribus doloremque autem saepe ratione, dolorem unde fugit repellendus ullam aspernatur fuga et minus provident, magnam, alias excepturi!</p>
+            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
           </div>
         </div>
         <div class="program-content-card">
           <div class="program-content-image">
-            image
+            <img src="/images/check-img.jpg" alt="">
+          </div>
+          <div class="program-content-title" class="program-content-img">
+            <h4>CC Ignite</h4>
           </div>
           <div class="program-content-info">
-            <h1>Lecture</h1>
-            <p>&Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi tenetur exercitationem aut doloribus doloremque autem saepe ratione, dolorem unde fugit repellendus ullam aspernatur fuga et minus provident, magnam, alias excepturi!</p>
+            <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
           </div>
         </div>
-        
+        <p class="see-more-program">
+          <a href="#">SEE THE WHOLE PROGRAM</a>
+        </p>
       </div>
-      <p>SEE THE WHOLE PROGRAM</p>
+      
     </section>
     
     <section id="featured-speaker" class="featured-speaker">
@@ -114,10 +128,10 @@
       <div class="featured-speaker-content">
         <div class="featured-speaker-card">
           <div class="featured-speaker-image">
-            image
+            <img src="/images/speaker.jpg" alt="speaker">
           </div>
           <div class="featured-speaker-info">
-            <h4>speaker name</h4>
+            <h6>speaker name</h6>
             <p class="featured-speaker-title">
               &Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore explicabo magnam exercitationem, nihil veritatis ipsa? Asperiores aperiam ipsum repellat commodi hic assumenda eligendi similique deleniti
             </p>
