--- a/views/index.html
+++ b/views/index.html
@@ -131,12 +131,57 @@
             <img src="/images/speaker.jpg" alt="speaker">
           </div>
           <div class="featured-speaker-info">
-            <h6>speaker name</h6>
+            <h6>John Walter</h6>
             <p class="featured-speaker-title">
-              &Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore explicabo magnam exercitationem, nihil veritatis ipsa? Asperiores aperiam ipsum repellat commodi hic assumenda eligendi similique deleniti
+              &Lorem ipsum dolor sit amet conse ctetur adipisicing elit.
             </p>
             <p class="featured-speaker-detail">
-              &Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aliquam nemo eius quos magni ducimus, magnam ab consequuntur assumenda non architecto inventore tempora accusantium, alias expedita minus rerum pariatur veritatis!
+              &Lorem ipsum dolor sit amet conse ctetur, adipisicing elit.
+            </p>
+          </div>
+        </div>
+
+        <div class="featured-speaker-card">
+          <div class="featured-speaker-image">
+            <img src="/images/speaker.jpg" alt="speaker">
+          </div>
+          <div class="featured-speaker-info">
+            <h6>John Walter</h6>
+            <p class="featured-speaker-title">
+              &Lorem ipsum dolor sit amet conse ctetur adipisicing elit.
+            </p>
+            <p class="featured-speaker-detail">
+              &Lorem ipsum dolor sit amet conse ctetur, adipisicing elit.
+            </p>
+          </div>
+        </div>
+
+        <div class="featured-speaker-card">
+          <div class="featured-speaker-image">
+            <img src="/images/speaker.jpg" alt="speaker">
+          </div>
+          <div class="featured-speaker-info">
+            <h6>John Walter</h6>
+            <p class="featured-speaker-title">
+              &Lorem ipsum dolor sit amet conse ctetur adipisicing elit.
+            </p>
+            <p class="featured-speaker-detail">
+              &Lorem ipsum dolor sit amet conse ctetur, adipisicing elit.
+            </p>
+          </div>
+        </div>
+
+        <div class="featured-speaker-card">
+          <div class="featured-speaker-image">
+            <img src="/images/speaker.jpg" alt="speaker">
+          </div>
+          <div class="featured-speaker-info">
+            <h6>John Walter</h6>
+            <p class="featured-speaker-title">
+              &Lorem ipsum dolor sit amet conse ctetur adipisicing elit.
+            </p>
+            <p class="featured-speaker-detail">
+              &Lorem ipsum dolor sit amet conse ctetur, adipisicing elit.
             </p>
           </div>
         </div>
