--- a/views/index.html
+++ b/views/index.html
@@ -6,32 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/styles.css">
-  <title>Document</title>
+  <title>Kaduna Security Summit 2021</title>
 </head>
 <body>
   <header>
     <div class="navigation-info">
       <ul class="navigation-content-info">
-        <li><a href="#">f</a></li>
-         <li><a href="#">T</a></li>
+        <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
+         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#">English</a></li>
          <li><a href="#">My Page</a></li>
-         <li><a href="#">Logout</a></li>
+         <li><a href="#">Logout <i class="fa fa-sign-out"></i></a></li>
       </ul>
     </div>
     <div class="navigation-bar">
       <div class="logo">
-        <a href="#">LOGO <img class="logo-icon"/></a>
+        <a href="#"><img src="/images/kaduna-img.jpg" alt="Kaduna state" class="logo-icon"></a>
       </div>
       <nav>
         <div class="fsnav">
           <button type="button" class="fsnav-close">&times;</button>
-          <a href="#" class="fsnav-link" id="#about">About</a>
+          <a href="about.html" class="fsnav-link" id="#about">About</a>
           <a href="#" class="fsnav-link" id="#program">Program</a>
           <a href="#" class="fsnav-link" id="#join">Join</a>
           <a href="#" class="fsnav-link" id="#sponsor">Sponsor</a>
           <a href="#" class="fsnav-link" id="#news">News</a>
-          <a href="#" class="fsnav-link" id="#cc-campaign">CC campaign</a>
+          <a href="#" class="fsnav-link" id="#cc-campaign">Security Awareness</a>
         </div>
         <div class="menu" onclick="openNav()">
           <div class="menu-line"></div>
@@ -44,12 +44,12 @@
   <div class="section-wrapper">
     <section id="welcome" class="welcome">
       <div class="welcome-content">
-        <p class="greeting-paragraph">"Hello! Sharing world"</p>
-        <h1>CREACTIVE COMMONS GLOBAL SUMMIT 2015</h1>
+        <p class="greeting-paragraph">"Hello! Security is everyone responsibility"</p>
+        <h1>Kaduna State Security Summit 2021</h1>
         <p class="intro-paragraph">
           A joyful celebration believeing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in October, in Korea.
         </p>
-        <div>
+        <div class="welcome-venue">
           <h3>2015.10.15(THU) ~ 16(FRI)</h3>
           <p>@ National Museum of Korea. Art center   Nabi and more
           </p>
@@ -63,7 +63,6 @@
         <div class="program-content-card">
           <div class="program-content-image">
             <img src="/images/check-img.jpg" alt="">
-            <!-- <i class="fa fa-address-card-o"></i> -->
           </div>
           <div class="program-content-title">
             <h4>Lecture</h4>
@@ -116,11 +115,10 @@
             <p>&Lorem ipsum dolor sit amet repellendus ullam aspernatur fuga </p>
           </div>
         </div>
-        <p class="see-more-program">
-          <a href="#">SEE THE WHOLE PROGRAM</a>
-        </p>
       </div>
-      
+      <p class="see-more-program">
+        <a href="#">SEE THE WHOLE PROGRAM</a>
+      </p>
     </section>
     
     <section id="featured-speaker" class="featured-speaker">
